--- a/categorias/Joshua_Gutierrez.html
+++ b/categorias/Joshua_Gutierrez.html
@@ -18,7 +18,7 @@
                 <h2 class="instructor_name">Doctrina</h2>
                 <p class="instructor_tag">Tema de Doctrina</p> -->
                 <h1 class="hero_title_C">Joshua Gutierrez</h1><br>
-                <p class="instructor_paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, impedit!</p><br>
+                <p class="instructor_paragraph">20 años, Hondureño, Ing. en sistemas</p><br>
                 <a href="../index.html" class="cta" style="margin: 10px">Volver a Inicio</a>
                 <!-- <a href="#contenido" class="cta">Ver Contenido</a> -->
             </div>
@@ -28,7 +28,7 @@
 
             <div class="about_course">
                 <h2 class="title title--border">¿Quién es Joshua Gutierrez?</h2>
-                <p class="about_paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga et autem ipsam, animi consequuntur omnis, obcaecati voluptas minima, vitae qui perspiciatis quam sapiente nostrum repudiandae tenetur velit expedita! Animi, voluptatum.</p>
+                <p class="about_paragraph">Soy un tipo muy serio y tranquilo, me gusta todo tipo de música y tambien me gusta tocar el bajo y la guitarra y me gusta jugar futbol.</p>
                 <a href="../index.html" class="cta" style="margin: 10px">Match</a>
 
                 <!-- <a href="#contenido" class="cta">Ver Contenido</a> -->
@@ -58,7 +58,7 @@
 
                     <img src="../assets/Persona_1.jpg " alt=" ">
                     <h4>Pedro Pablo</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur </p>
+                    <p>23 años, Salvadoreño, Lic. en lenguas extranjeras </p>
                     <a href="# " class="cta ">Ver Perfíl</a>
 
                 </div>
@@ -66,8 +66,8 @@
                 <div class="card_ ">
 
                     <img src="../assets/Persona_2.jpg " alt=" ">
-                    <h4>Yessy Alvarez</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur </p>
+                    <h4>Katherine Perdomo</h4>
+                    <p>18 años, Beliceña, Ing. en industruial</p>
                     <a href="# " class="cta ">Ver Perfíl</a>
 
                 </div>
@@ -75,8 +75,8 @@
                 <div class="card_ ">
 
                     <img src="../assets/Persona_3.jpg " alt=" ">
-                    <h4>Nolvia Ramos</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur </p>
+                    <h4>Lizeth Ordoñez</h4>
+                    <p>25 años, Hondureña, Lic. en biología</p>
                     <a href="# " class="cta ">Ver Perfíl</a>
 
                 </div>
@@ -158,7 +158,7 @@
             </div>
 
             <p class="footer_copyright ">
-                Sitio Web creado por &copy; Leonardo Alvarado:
+                Sitio Web creado por &copy; Grupo8:
             </p>
         </div>
     </footer>
